--- a/privacy.html
+++ b/privacy.html
@@ -1,20 +1,36 @@
-Privacy Policy
-Last Updated: January 1, 2026
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy - Panda Royale Calculator</title>
+    <style>
+        body { font-family: sans-serif; line-height: 1.6; color: #333; max-width: 800px; margin: 0 auto; padding: 2rem; background-color: #f4f4f9; }
+        .card { background: white; padding: 2rem; border-radius: 12px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
+        h1 { color: #0f172a; border-bottom: 2px solid #16a34a; padding-bottom: 10px; }
+        h2 { color: #1e293b; margin-top: 1.5rem; }
+        footer { margin-top: 2rem; font-size: 0.8rem; color: #666; text-align: center; }
+    </style>
+</head>
+<body>
+    <div class="card">
+        <h1>Privacy Policy</h1>
+        <p><strong>Last Updated:</strong> January 1, 2026</p>
+        
+        <p>Panda Royale Calculator ("the App") is provided as a free service. Your privacy is paramount; this policy explains our data practices.</p>
 
-Panda Royale Calculator is built as a Progressive Web App. This service is provided at no cost and is intended for use as is.
+        <h2>1. Data Collection & Storage</h2>
+        <p>The App does <strong>not</strong> collect personal data. All game history, scores, and settings are stored locally on your device via <code>LocalStorage</code>. This data stays on your device and is not transmitted to any servers.</p>
 
-1. Data Collection
+        <h2>2. Third Parties</h2>
+        <p>We do not share, sell, or trade any information with third parties. No analytics or advertising trackers are used in this App.</p>
 
-We do not collect, store, or share any personal information. All game data and history are stored locally on your device via browser storage (LocalStorage).
+        <h2>3. Permissions</h2>
+        <p>The App does not require access to your location, contacts, or camera.</p>
 
-2. Third-Party Services
-
-The app does not use third-party analytics or advertising SDKs.
-
-3. Permissions
-
-The app does not require access to your camera, contacts, or location.
-
-4. Contact
-
-If you have questions, please contact the developer via their GitHub profile.
+        <h2>4. Contact</h2>
+        <p>For questions regarding this policy, please contact the developer via the official project repository.</p>
+    </div>
+    <footer>&copy; 2026 Panda Royale Calculator</footer>
+</body>
+</html>
